[gd_scene load_steps=5 format=3 uid="uid://236ly8eb4a4w"]

[ext_resource type="Script" path="res://HUD.gd" id="1_r1vsb"]
[ext_resource type="FontFile" uid="uid://b64fiklyysine" path="res://fonts/Xolonium-Regular.ttf" id="2_tyerq"]

[sub_resource type="InputEventAction" id="InputEventAction_nfgrk"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_raqk0"]
events = [SubResource("InputEventAction_nfgrk")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_r1vsb")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 64
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.0
offset_top = 25.0
offset_right = 113.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 32
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -174.0
offset_right = 240.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 64
text = "Objective: Survive"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ControlsMessage" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = 31.0
offset_right = 80.5
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 17
text = "Move: ASWD
Aim: Move Mouse
Shoot: Left Click"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 50
shortcut = SubResource("Shortcut_raqk0")
text = "Start"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 252.0
offset_top = -140.0
offset_right = 452.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="DifficultyButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -452.0
offset_top = -140.0
offset_right = -252.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_tyerq")
theme_override_font_sizes/font_size = 50
text = "Normal"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="DifficultyButton" to="." method="_on_difficulty_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
